[package]
name = "fractionax"
version = "0.1.0"
description = "Fractionax RWA on-chain program (Anchor)."
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "fractionax"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
